fixed dark mode

--- a/lab5/css/custom.css
+++ b/lab5/css/custom.css
@@ -161,7 +161,8 @@ h1, h2, h3, h4, h5, h6 {
 #main_3d_image {
     background-image: url(../assets/images/main_3D.jpg); 
     background-repeat: no-repeat;
-    height: 200px;
+    height: 220px;
+    background-position: center;
 }
 #main_text {
     float: left;
@@ -194,7 +195,6 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 10px;
     margin-bottom: 10px;
     background-color: rgb(243, 182, 182);
-    
 }
 
 .card-header {
@@ -429,5 +429,14 @@ body {
 /* Extra large devices (large desktops, 1200px and up)
 */
 @media (min-width: 1200px) {
-
+    #main_text {
+        float: left;
+        left: 20px;
+        margin: 5%;
+        width: 90%;
+        display: block;
+        background-color: rgba(255,255,255,0.8);
+        padding: 10px;
+        border-radius: 5px;
+    }
 }
